# go-whisper-ct2

./: .gitignore  BENCHMARKING.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  PERFORMANCE.md  README.md  go.mod
cmd/benchmark/: README.md  main.go
csrc/: CMakeLists.txt
csrc/include/: whisper_ct2.h
csrc/src/: audio_processor.cpp  audio_processor.h  mel_filters.cpp  mel_filters.h  stft.cpp  stft.h  whisper_ct2.cpp
pkg/whisper/: doc.go  errors.go  model.go  options.go  result.go  transcribe.go  whisper.go
scripts/: README.md  benchmark-python.py  compare.py  run-comparison.sh
